修改父子关系，电话保存，POI保存接口

--- a/scripts/components/poi3/tpls/attr-deep/parkingTpl.html
+++ b/scripts/components/poi3/tpls/attr-deep/parkingTpl.html
@@ -47,7 +47,7 @@
                     </li>
                     <li>
                         <label>营业时间</label>
-                        <div><input type="text" class="fm-control" ng-model="poi.parkings[0].openTime"/></div>
+                        <div><input type="text" class="fm-control" ng-model="poi.parkings[0].openTiime"/></div>
                     </li>
                     <li>
                         <label>收费描述</label>
