--- a/scripts/components/poi3/tpls/attr-base/relationInfoTpl.html
+++ b/scripts/components/poi3/tpls/attr-base/relationInfoTpl.html
@@ -10,7 +10,7 @@
                         </label>
                         <div>
                             <a href="javascript:void(0);" title="显示" ng-click="showParentPoiInMap(poi.parents[0].parentPoiPid)"><i class="glyphicon glyphicon-link"></i></a>
-                            <a href="javascript:void(0);" title="解除父" ng-click="showParentPoiInMap(poi.parents[0].parentPoiPid)" style="padding-left:10px;"><i class="glyphicon glyphicon-trash"></i></a>
+                            <a href="javascript:void(0);" title="解除父" ng-click="deleteParent(poi)" style="padding-left:10px;"><i class="glyphicon glyphicon-trash"></i></a>
                         </div>
                     </li>
                     <li ng-if="poi.parents.length <= 0">
