--- a/scripts/components/road3/tpls/toolBar_cru_tpl/addZoneShapeTpl.html
+++ b/scripts/components/road3/tpls/toolBar_cru_tpl/addZoneShapeTpl.html
@@ -53,11 +53,11 @@
     }
 </style>
 <div id="fm-addZoneShapContainer" ng-controller="addZoneShapeController" class="btn-group btn-group-sm dropdown" style="width: 100%;">
-    <button type="button" class="btn addAdNode_{{classArr[25]}}" id="addNode" ng-click="addZoneShape('zoneNode',25,$event)"
+    <button type="button" class="btn addAdNode_{{classArr[25]}}" ng-click="addZoneShape('zoneNode',25,$event)"
             title="新增ZONENODE+"></button>
-    <button type="button" class="btn addAdLink_{{classArr[26]}}" id="addAdLink" ng-click="addZoneShape('zoneLink',26,$event)"
+    <button type="button" class="btn addAdLink_{{classArr[26]}}" ng-click="addZoneShape('zoneLink',26,$event)"
             title="新增ZONELINE+"></button>
-    <button type="button" class="btn addAdFace_{{classArr[27]}} dropdown-toggle"  ng-click="addZoneShape('zoneFace',27,$event)"
+    <button type="button" class="btn addAdFace_{{classArr[27]}}"  ng-click="addZoneShape('zoneFace',27,$event)"
             title="新增ZONEFACE+">
     </button>
 
