--- a/scripts/components/road3/tpls/toolBar_cru_tpl/addAdShapeTpl.html
+++ b/scripts/components/road3/tpls/toolBar_cru_tpl/addAdShapeTpl.html
@@ -80,8 +80,8 @@
     </button>
     <ul class="dropdown-menu shape-well" role="menu">
         <div class="btn-group btn-group-sm" style="float: none;">
-            <button type="button" class="btn btn-default btn-shape" ng-click="addShape('adFace',21,$event)">新增面</button>
-            <button type="button" class="btn btn-default btn-shape" ng-click="addShape('adFaceLine',21,$event)">线构面</button>
+            <button type="button" class="btn btn-shape" ng-click="addAdShape('adFace',21,$event)">新增面</button>
+            <button type="button" class="btn btn-shape" ng-click="addAdShape('adFaceLine',21,$event)">线构面</button>
         </div>
     </ul>
 
