--- a/scripts/components/road3/tpls/toolBar_cru_tpl/addZoneShapeTpl.html
+++ b/scripts/components/road3/tpls/toolBar_cru_tpl/addZoneShapeTpl.html
@@ -57,8 +57,13 @@
             title="新增ZONENODE+"></button>
     <button type="button" class="btn addAdLink_{{classArr[26]}}" ng-click="addZoneShape('zoneLink',26,$event)"
             title="新增ZONELINE+"></button>
-    <button type="button" class="btn addAdFace_{{classArr[27]}}"  ng-click="addZoneShape('zoneFace',27,$event)"
-            title="新增ZONEFACE+">
+    <button type="button" class="btn addAdFace_{{classArr[27]}} dropdown-toggle" id="addPolygonZone"
+            data-toggle="dropdown" title="新增ZONEFACE">
     </button>
-
+    <ul class="dropdown-menu shape-well" role="menu">
+        <div class="btn-group btn-group-sm" style="float: none;">
+            <button type="button" class="btn btn-shape" ng-click="addZoneShape('zoneFace',27,$event)">新增面</button>
+            <button type="button" class="btn btn-shape" ng-click="addZoneShape('zoneFaceLine',27,$event)">线构面</button>
+        </div>
+    </ul>
 </div>
