--- a/styles/imeep/editor-road.css
+++ b/styles/imeep/editor-road.css
@@ -1137,3 +1137,8 @@
     width: 100%;
     text-align: center;
 }
+.text-ellipsis{
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+}
