--- a/scripts/components/road3/tpls/toolBar_cru_tpl/addAdShapeTpl.html
+++ b/scripts/components/road3/tpls/toolBar_cru_tpl/addAdShapeTpl.html
@@ -65,11 +65,11 @@
     }
 </style>
 <div id="fm-addShapContainer" ng-controller="addAdShapeController" class="btn-group btn-group-sm dropdown" style="width: 100%;">
-    <button type="button" class="btn addAdNode_{{classArr[18]}}" id="addNode" ng-click="addShape('adNode',18,$event)"
+    <button type="button" class="btn addAdNode_{{classArr[18]}}" id="addNode" ng-click="addAdShape('adNode',18,$event)"
             title="新增ADNODE+"></button>
-    <button type="button" class="btn addAdLink_{{classArr[19]}}" id="addAdLink" ng-click="addShape('adLink',19,$event)"
+    <button type="button" class="btn addAdLink_{{classArr[19]}}" id="addAdLink" ng-click="addAdShape('adLink',19,$event)"
             title="新增ADLINE"></button>
-    <button type="button" class="btn addAdAdmin_{{classArr[20]}} dropdown-toggle"  ng-click="addShape('adAdmin',20,$event)"
+    <button type="button" class="btn addAdAdmin_{{classArr[20]}} dropdown-toggle"  ng-click="addAdShape('adAdmin',20,$event)"
             title="新增行政区划代表点">
     </button>
     <!--<button type="button" class="btn addAdFace_{{classArr[7]}}" id="addPolygon"  ng-click="addShape('adFace',7,$event)"-->
