大路口模式图修改

--- a/scripts/components/poi3/tpls/attr-base/poiDataListTpl.html
+++ b/scripts/components/poi3/tpls/attr-base/poiDataListTpl.html
@@ -7,7 +7,7 @@
         </div>
         <div class="btn-group" role="group">
             <button class="btn btn-xs btn-purple" ng-class="{2: 'active'}[dataListType]" ng-click="changeDataList(2)">
-            <i class="glyphicon glyphicon-th-list"></i> 待提交
+            <i class="glyphicon glyphicon-th-list"></i> 已作业
             </button>
         </div>
         <div class="btn-group" role="group">
