选择 修改 zoneNode zoneLink zoneFace

--- a/scripts/components/poi-new/tpls/attr-deep/chargingPoleTpl.html
+++ b/scripts/components/poi-new/tpls/attr-deep/chargingPoleTpl.html
@@ -5,10 +5,10 @@
                 <ul >
                     <a href="#deepInfoOne" data-toggle="tab" data-width="">专有信息{{$index+1}}
                         <div class="btn-group"  style="display: inline-block;float: right;" ng-if="chargingArr.length==2">
-                            <button  data-toggle="tooltip"  data-index="{{$index}}" title="删除" class="glyphicon glyphicon-remove" type="button" ng-click="removeChargPole($index)"/>
+                            <button  data-toggle="tooltip"  data-index="{{$index}}" title="删除" class="glyphicon glyphicon-remove" type="button" ng-click="removeChargPole($index)"></button>
                         </div>
                         <div class="btn-group"  style="display: inline-block;float: right;" ng-if="chargingArr.length==1">
-                            <button  data-toggle="tooltip"  title="添加"  class="glyphicon glyphicon-plus"  style="margin-right: 5px;" type="button" ng-click="addChargPole()"/>
+                            <button  data-toggle="tooltip"  title="添加"  class="glyphicon glyphicon-plus"  style="margin-right: 5px;" type="button" ng-click="addChargPole()"></button>
                         </div>
                     </a>
                 </ul>
