--- a/scripts/components/road3/tpls/attr_node_tpl/rdNodeFromTpl.html
+++ b/scripts/components/road3/tpls/attr_node_tpl/rdNodeFromTpl.html
@@ -1,4 +1,80 @@
+<div class="fm-component" ng-controller="rdNodeFromController" >
+    <div class="title">
+        道路点
+        <span class="label label-info" >{{rdNodeData.pid}}</span>
+    </div>
+    <div class="content scroll-styled dark" style="height:90%;">
+        <form name="nodeForm">
+            <div class="fm-panel" >
+                <div class="content">
+                    <ul class="fm-ul fm-ul-form">
+                        <li>
+                            <label>NODE种别</label>
+                            <div>
+                                <select class="fm-control" ng-model="rdNodeData.kind"
+                                         ng-options="value.id as value.label for value in kindOptions" >
+                                </select>
+                            </div>
+                        </li>
+                        <li>
+                            <label>差分产品ID</label>
+                            <div>
+                                <input class="fm-control" type="text"  ng-model="rdNodeData.difGroupid">
+                            </div>
+                        </li>
+                        <li>
+                            <label>数据来源</label>
+                            <div>
+                                <select  ng-model="rdNodeData.srcFlag"
+                                         ng-options="value.id as value.label for value in srcFlagOptions" >
+                                </select>
+                            </div>
+                        </li>
+                        <li>
+                            <label>精度级别</label>
+                            <div>
+                                <select  ng-model="rdNodeData.digitalLevel"
+                                         ng-options="value.id as value.label for value in digitalLeveOptions" >
+                                </select>
+                            </div>
+                        </li>
+                        <li>
+                            <label>辅助标志</label>
+                            <div>
+                                <select ng-model="auxiFlag" ng-options="value.id as value.label for value in auxiFlagOptions" >
+                                </select>
+                            </div>
+                        </li>
+                        <li>
+                            <label>图幅号码</label>
+                            <div>
+                                <div style="text-align: left" ng-repeat="mitem in rdNodeData.meshes">
+                                    <input type="text"  ng-model="mitem.meshId">
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <label>Node形态</label>
+                            <div>
+                                <a  ng-click="showPopover()" style="cursor: pointer;">添加</a>
+                            </div>
+                        </li>
+                        <li>
+                            <div id="fromOfWRoaddiv" style="width:260px;">
+                                <div ng-repeat="fromitem in newFromOfWRoadDate track by $index" class="checkboxli">
+                                    {{fromitem.label}}
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
 
+
+<!--
 <div id="rdNodediv" ng-controller="rdNodeFromController" >
 
     <div style="height:50px">
@@ -77,4 +153,4 @@
 
     </ul>
     </form>
-</div>
+</div>-->
