样式和接口相关

--- a/scripts/components/road3/tpls/attr_zone_tpl/zoneFaceTpl.html
+++ b/scripts/components/road3/tpls/attr_zone_tpl/zoneFaceTpl.html
@@ -6,39 +6,31 @@
     <div class="content scroll-styled dark" style="height:90%;">
         <form name="zoneFaceForm">
             <div class="fm-panel">
-                <div class="title">
-                    <div>基础属性</div>
-                </div>
                 <div class="content">
                     <ul class="fm-ul fm-ul-form">
                         <li>
-                            <div><label>区划号码</label></div>
+                            <label>区划号码</label>
                             <div>
-                                <input type="text" class="fm-control" ng-model="zoneFaceData.regionId"
-                                       disabled="disabled">
+                                <input type="text" class="fm-control" ng-model="zoneFaceData.regionId" disabled="disabled">
                             </div>
                         </li>
                         <li>
-                            <div><label>图幅号</label></div>
+                            <label>图幅号</label>
                             <div>
                                 <input type="text" class="fm-control" ng-model="zoneFaceData.meshId"
                                        disabled="disabled">
                             </div>
                         </li>
                         <li>
-                            <div><label>面积</label></div>
+                            <label>面积</label>
                             <div>
-                                <input type="text" class="fm-control" ng-model="zoneFaceData.area" disabled="disabled"
-                                       >㎡
-                                <!--<label style="font-size: 18px">&nbsp;㎡</label>-->
+                                <input type="text" class="fm-control" ng-model="zoneFaceData.area" disabled="disabled">㎡
                             </div>
                         </li>
                         <li>
-                            <div><label>周长</label></div>
+                            <label>周长</label>
                             <div>
-                                <input type="text" class="fm-control" ng-model="zoneFaceData.perimeter"
-                                       disabled="disabled">m
-                                <!--<label style="font-size: 16px"></label>-->
+                                <input type="text" class="fm-control" ng-model="zoneFaceData.perimeter" disabled="disabled">m
                             </div>
                         </li>
                     </ul>
