--- a/styles/imeep/editor-road.css
+++ b/styles/imeep/editor-road.css
@@ -231,7 +231,7 @@
 
 .blackTheme select {
     color: #F3F6FA;
-    margin-left: -3px;
+    /*margin-left: -3px;*/
     width: 170px;
     border-radius: 4px;
     /*margin-top: 5px;*/
