道路tips的图片显示修改，增加鼠标图标翻页

--- a/scripts/components/road3/tpls/attr_tips_tpl/sceneAllTipsTpl.html
+++ b/scripts/components/road3/tpls/attr_tips_tpl/sceneAllTipsTpl.html
@@ -127,17 +127,17 @@
     </div>
     <div class="tips-title">
         <div class="col-sm-12" style="display: inline; cursor: pointer; padding-top: 2px; padding-left: 19px; width: 100px">
-            <div ng-if="photos.length == 0">
+            <div ng-if="dataTipsData.feedback.f_array.length == 0">
                 <img ng-src="../../../images/road/img/noimg.png" width="60px" height="60px" ng-click="noPic()">
             </div>
-            <div ng-if="photos.length > 0">
+            <div ng-if="dataTipsData.feedback.f_array.length > 0">
                 <img ng-src="{{photos[0]}}" width="60px" height="60px" ng-click="openOriginPic(0)">
                 <span style=" float: right;top: 0px;right: 10px; margin-top: -10px;background: red;border-radius: 15px;color: #fff!important;cursor: pointer;position: relative;line-height: 20px;display: inline-block;width: 20px;height: 20px;font-size: 13px;text-align: center" ng-if="dataTipsData.feedback.f_array.length!=0">{{dataTipsData.feedback.f_array.length}}</span>
             </div>
         </div>
         <div class="col-sm-12" style="margin-left: 30px; display: inline; cursor: pointer; padding-top: 2px; padding-left: 19px; width: 100px">
             <div ng-if="audios.length == 0">
-                <img ng-src="../../../images/road/img/novoice.png" width="60px" height="60px" ng-click="noRad()">
+                <img ng-src="../../../images/road/img/novoice.png" width="60px" height="60px" ng-click="noAudio()">
             </div>
             <div ng-if="audios.length > 0">
                 <img ng-src="../../../images/road/img/voice.png" width="60px" height="60px" ng-click="openVideo(0)">
@@ -420,7 +420,7 @@
                         </div>
                         <div class="form-group" style="height: 6%;margin-bottom: 3px;color:#fff;border-radius:4px;">
                             <label class="col-sm-5 control-label" style="padding: 4px">类&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;型:</label>
-                            <div class="col-sm-7" style="padding: 4px">
+                            <div class="col-sm-7 text-ellipsis" style="padding: 4px">
                                 <span class="label">{{tp}}</span>
                             </div>
                         </div>
@@ -971,19 +971,19 @@
                 <div class="panel-body" ng-if="allTipsType==1403">
                     <form class="form-horizontal" method="get" style="padding: 0px 3px 0px 3px;">
                         <div class="form-group" style="height: 10%;margin-bottom: 3px;margin-top:3px;color:#fff;border-radius:4px;">
-                            <label class="col-sm-5 control-label" style="padding: 4px">状&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;态:</label>
+                            <label class="col-sm-5 control-label" style="padding: 4px">状&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;态:</label>
                             <div class="col-sm-7" style="padding: 3px">
                                 <span  class="label label-info" ng-bind="showContent"></span>
                             </div>
                         </div>
                         <div class="form-group" style="height: 10%;margin-bottom: 3px;margin-top:3px;color:#fff;border-radius:4px;">
-                            <label class="col-sm-5 control-label" style="padding: 4px">进&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;入:</label>
+                            <label class="col-sm-5 control-label" style="padding: 4px">进&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;入:</label>
                             <div class="col-sm-7" style="padding: 3px">
                                 <span class="label" ng-bind="sceneEnty.id" style="cursor:pointer;" ng-click="getFeatDataCallback(sceneEnty.id,'RDLINK')"></span>
                             </div>
                         </div>
                         <div class="form-group" style="height: 10%;margin-bottom: 3px;margin-top:3px;color:#fff;border-radius:4px;">
-                            <label class="col-sm-5 control-label" style="padding: 4px">退&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;出:</label>
+                            <label class="col-sm-5 control-label" style="padding: 4px">退&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;出:</label>
                             <div class="col-sm-7" style="padding: 3px" ng-repeat="item in sceneOut">
                                 <span class="label" ng-bind="item.out.id" style="cursor:pointer;" ng-click="getFeatDataCallback(item.out.id,'RDLINK')"></span>
                             </div>
@@ -1448,8 +1448,6 @@
                         </div>
                     </form>
                 </div>
-                <!-- begin 危险信息-->
-                <!-- end 危险信息-->
             </div>
         </div>
         <div class="both" >
