--- a/scripts/components/road3/tpls/attr_tips_tpl/tipsPictureTpl.html
+++ b/scripts/components/road3/tpls/attr_tips_tpl/tipsPictureTpl.html
@@ -13,16 +13,17 @@
         </h4>
     </div>
     <div class="modal-body">
-        <div class="road-switch-left" ng-click="switchPic(0);">
+        <!--<div class="road-switch-left" ng-click="switchPic(0);">
             <img src="../../../images/road/img/left.png">
-        </div>
-        <div id="imgContainer">
+        </div>-->
+        <div id="imgContainer" ng-class="{'cursor-left':imgSwitchCondition == -1,'cursor-right':imgSwitchCondition == 1,'cursor-default':imgSwitchCondition == 0}" title="{{switchArrowTitle}}" ng-click="switchImg();">
             <img id="dataTipsOriginImg" src=""/>
         </div>
-        <div class="road-switch-right" ng-click="switchPic(1);">
+        <!--<div class="road-switch-right" ng-click="switchPic(1);">
             <img src="../../../images/road/img/right.png">
-        </div>
+        </div>-->
         <!--<div ng-show="showLoading" id="loadText">加载中...</div>-->
         <div id="imgPage">{{imgPageNow || 0}}/{{imgAllPage || 0}}</div>
+        {{pointX}}-{{pointY}}
     </div>
 </div>
