--- a/scripts/components/poi3/tpls/edit-tools/optionBarTpl.html
+++ b/scripts/components/poi3/tpls/edit-tools/optionBarTpl.html
@@ -23,7 +23,7 @@
         <i class="glyphicon glyphicon-refresh"></i>
         刷新检查
         </button>
-        <button ng-show="tagSelect == 'errorCheck'" class="btn btn-xs fm-output-btn pull-right" ng-click="CheckUpResult();">
+        <button ng-show="tagSelect == 'errorCheck'" class="btn btn-xs fm-output-btn pull-right" ng-click="checkUpResult();">
         <i class="glyphicon glyphicon-equalizer"></i>
         在线检查
         </button>
