--- a/scripts/components/road3/tpls/toolBar_cru_tpl/addShapeTpl.html
+++ b/scripts/components/road3/tpls/toolBar_cru_tpl/addShapeTpl.html
@@ -1,8 +1,8 @@
 <style>
-    .btn-group > .btn:first-child:not(:last-child):not(.dropdown-toggle) {
+    /*.btn-group > .btn:first-child:not(:last-child):not(.dropdown-toggle) {
         border-radius: 0!important;
         border-radius: 0!important;
-    }
+    }*/
     .addNode_false {
         background: url('../../../images/road/button/dot_add.png') no-repeat;
         width: 32px;
