--- a/scripts/components/road3/tpls/layers_switch_tpl/sceneLayers.html
+++ b/scripts/components/road3/tpls/layers_switch_tpl/sceneLayers.html
@@ -52,7 +52,7 @@
         </li>
     </ul>
     <ul>
-        <li><label>关系</label></li>
+        <li><label>关系数据</label></li>
         <li>
             <ul style="padding-left: 10px" >
                 <li ng-repeat="item in items" ng-if="item.options.id!=='rdrtic'">
@@ -64,11 +64,6 @@
     </ul>
     <!-- 参考图层设置 -->
     <div class="sceneLayerPanel">
-        <div style="background-color: rgb(64,64,64);padding: 5px 10px;">
-            <label style="font-size:18px;color:#FFF;margin-bottom: 0;letter-spacing: 3px">
-                <i style="font-size: 16px;" class="glyphicon glyphicon-wrench"></i> 图层设置
-            </label>
-        </div>
         <ul>
             <li><label>图层选择</label></li>
             <li ng-repeat="item in layers">
