--- a/scripts/components/poi3/tpls/attr-tips/poiPopoverTips.html
+++ b/scripts/components/poi3/tpls/attr-tips/poiPopoverTips.html
@@ -6,7 +6,7 @@
     </div>
     <button type="button" class="close pull-right close-tips" aria-label="Close" ng-click="closeTips();"><span aria-hidden="true">&times;</span></button>
     <div class="col-sm-12 img-preview-container">
-        <span class="glyphicon glyphicon-trash remove-preview-img" title="删除"></span>
+        <span ng-if="nowActiveImg.thumbnailUrl" class="glyphicon glyphicon-trash remove-preview-img" title="删除" ng-click="deletePhoto(nowActiveImg);"></span>
         <img ng-if="nowActiveImg.thumbnailUrl" ng-click="showImage(nowActiveImg,nowActiveIndex);" image-404="../../../images/road/img/noimg.png" ng-src="{{nowActiveImg.originUrl}}" class="img-preview" alt="">
         <img ng-if="!nowActiveImg.thumbnailUrl" src="../../../images/road/img/noimg.png" class="img-preview" alt="当前无图片">
     </div>
@@ -18,7 +18,7 @@
             <span class="glyphicon glyphicon-menu-right"></span>
         </button>
         <div ng-repeat="item in poi.photos ">
-            <img ng-if="poi.photos.length < 4" image-404="../../../images/road/img/noimg.png" ng-src="{{item.thumbnailUrl}}"
+            <img ng-if="poi.photos.length < 5" image-404="../../../images/road/img/noimg.png" ng-src="{{item.thumbnailUrl}}"
                  ng-click="showPreviewImg(item,$index);" ng-class="{'active':nowActiveIndex == $index,'tips-img':true}" alt="">
             <img ng-if="poi.photos.length > 4 && $index > 4*(tipsPage-1)-1  && $index < 4*tipsPage" image-404="../../../images/road/img/noimg.png" ng-src="{{item.thumbnailUrl}}"
                  ng-click="showPreviewImg(item,$index);" ng-class="{'active':nowActiveIndex == $index,'tips-img':true}" alt="">
