tips的图标数量

--- a/scripts/components/road3/tpls/attr_tips_tpl/sceneAllTipsTpl.html
+++ b/scripts/components/road3/tpls/attr_tips_tpl/sceneAllTipsTpl.html
@@ -132,7 +132,7 @@
             </div>
             <div ng-if="dataTipsData.feedback.f_array.length > 0">
                 <img ng-src="{{photos[0]}}" width="60px" height="60px" ng-click="openOriginPic(0)">
-                <span style=" float: right;top: 0px;right: 10px; margin-top: -10px;background: red;border-radius: 15px;color: #fff!important;cursor: pointer;position: relative;line-height: 20px;display: inline-block;width: 20px;height: 20px;font-size: 13px;text-align: center" ng-if="photos.length!=0">{{photos.length}}</span>
+                <span style=" float: right;top: 0px;right: 10px; margin-top: -10px;background: red;border-radius: 15px;color: #fff!important;cursor: pointer;position: relative;line-height: 20px;display: inline-block;width: 20px;height: 20px;font-size: 13px;text-align: center" ng-if="dataTipsData.feedback.f_array.length!=0">{{dataTipsData.feedback.f_array.length}}</span>
             </div>
         </div>
         <div class="col-sm-12" style="margin-left: 30px; display: inline; cursor: pointer; padding-top: 2px; padding-left: 19px; width: 100px">
