--- a/scripts/components/road3/tpls/attr_tips_tpl/sceneAllTipsTpl.html
+++ b/scripts/components/road3/tpls/attr_tips_tpl/sceneAllTipsTpl.html
@@ -127,12 +127,12 @@
     </div>
     <div class="tips-title">
         <div class="col-sm-12" style="display: inline; cursor: pointer; padding-top: 2px; padding-left: 19px; width: 100px">
-            <div ng-if="dataTipsData.feedback.f_array.length == 0">
+            <div ng-if="tipsPhotos.length == 0">
                 <img ng-src="../../../images/road/img/noimg.png" width="60px" height="60px" ng-click="noPic()">
             </div>
-            <div ng-if="dataTipsData.feedback.f_array.length > 0">
+            <div ng-if="tipsPhotos.length > 0">
                 <img ng-src="{{photos[0]}}" width="60px" height="60px" ng-click="openOriginPic(0)">
-                <span style=" float: right;top: 0px;right: 10px; margin-top: -10px;background: red;border-radius: 15px;color: #fff!important;cursor: pointer;position: relative;line-height: 20px;display: inline-block;width: 20px;height: 20px;font-size: 13px;text-align: center" ng-if="dataTipsData.feedback.f_array.length!=0">{{dataTipsData.feedback.f_array.length}}</span>
+                <span style=" float: right;top: 0px;right: 10px; margin-top: -10px;background: red;border-radius: 15px;color: #fff!important;cursor: pointer;position: relative;line-height: 20px;display: inline-block;width: 20px;height: 20px;font-size: 13px;text-align: center" ng-if="tipsPhotos.length!=0">{{tipsPhotos.length}}</span>
             </div>
         </div>
         <div class="col-sm-12" style="margin-left: 30px; display: inline; cursor: pointer; padding-top: 2px; padding-left: 19px; width: 100px">
